syntax = "proto3";

package supervisor;

import "google/protobuf/any.proto";
import "github.com/vektorlab/gaffer/host/host.proto";
import "github.com/vektorlab/gaffer/service/service.proto";

// Server communicates with multiple Supervisors
// running on a given host. Each running service is 
// associated with one Supervisor.
service Supervisor {
  // Status returns the status of a given container service
  rpc Status (StatusRequest) returns (StatusResponse) {}
  // Restart restarts a container service
  rpc Restart (RestartRequest) returns (RestartResponse) {}
}


message StatusRequest {}

message StatusResponse {
  host.Host host = 1;
  map<string, service.Service> services = 2;
  map<string, google.protobuf.Any> stats = 3;
}

message RestartRequest {
  string id = 1;
}

message RestartResponse {}
